<resources>
    <string name="app_name">Velikanova-v-21</string>
    <string name="vhod">Вход</string>
    <string name="image1">TODO</string>
    <string name="line">TODO</string>
    <string name="image2">TODO</string>
    <string name="image3">TODO</string>
    <string name="line2">TODO</string>
    <string name="login">TODO</string>
    <string name="arrow">TODO</string>
    <string name="comment">   Оставить комментарий</string>
    <string name="user">Пользователь</string>
    <string name="text1">Фото</string>
    <string name="com">TODO</string>
    <string name="image">TODO</string>
    <string name="menu">TODO</string>
    <string name="icon">TODO</string>
    <string name="back">TODO</string>
    <string name="background">TODO</string>
    <string name="flip">TODO</string>
    <string name="scrin">TODO</string>
    <string name="last">TODO</string>
    <string name="vhodit">TODO</string>
    <string name="exitt">TODO</string>
    <string name="backk">TODO</string>
    <string name="flipp">TODO</string>
    <string name="lastp">TODO</string>
    <string name="scrinn">TODO</string>
    <string name="menuu">TODO</string>
    <string name="arrowb">TODO</string>
    <string name="rep">TODO</string>
    <string name="comm">TODO</string>
    <string name="like">TODO</string>
</resources>